@startuml Class Diagram for Twitter Clone

class User <<Entity>> {
  + id          : Number 
  + name        : String
  + username    : String
  + email       : String
  + password    : String
  + bio         : String
  + location    : String
  + webSite     : String
  + createdAt   : Date
  + profilePic  : String
  + tweets      : [Tweet]
  + likedTweets : [Tweet]
  + followings  : [User]
  + followers   : [User]
  + home        : [Tweet]

  + tweet()
  + deleteTweet()
  + follow()
  + unfollow()
  + retweet()
  + unretweet()
  + like()
  + unlike()
  + reply()
}

class Tweet <<Entity>> {
  + id            : Number
  + author        : User
  + content       : String
  + createdAt     : Date
  + attachments   : []
  + replies       : [Tweet]
  + retweets      : [Tweet]
  + likes         : [User]
}

class Retweet <<Entity>> {
  + originalTweet : Tweet
}

User *-- Tweet
Tweet <|-- Retweet

@enduml